<resources>
    <string name="app_name" translatable="false"></string>
    <string name="Usuario">User</string>
    <string name="Contraseña">Password</string>
    <string name="Recordar_contraseña">Remember password</string>
    <string name="Entrar">Login</string>
    <string name="Registrarse">Register</string>
    <string name="Introduce_tu_email">Email</string>
    <string name="apellidos">Surname</string>
    <string name="nombre_usuario">Username</string>
    <string name="introduce_la_contrase_a">Password</string>
    <string name="repite_la_contrase_a">Repeat password</string>
    <string name="Nombre_aplicacion_o_juego">App name or game</string>
    <string name="resenha_juego">Review</string>
    <string name="enviar">Send</string>
    <string name="escribe_la_rese_a">Write the review</string>
    <string name="a_adir_mas_rese_as">More reviews</string>
    <string name="Escribe_la_resenha">" Write the review"</string>
    <string name="Juego">Game</string>
    <string name="Aplicacion">App</string>
    <string name="Nombre">Name</string>
    <string name="App">App</string>
    <string name="Spinner">Spinner</string>
    <string name="PaginaPrincipal">Homepage</string>
    <string name="spinner">Spinner</string>
    <string name="MisResenhas">Mis Reseñas</string>
    <string name="HacerResenhas">Do a review</string>
    <string name="Ajustes">Settings</string>
    <string name="Salir">Exit</string>
    <string name="action_ajustes">Ajustes</string>
    <string name="action_salir">Salir</string>

</resources>