<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Paginaprincipal">


    <LinearLayout
        android:layout_width="305dp"
        android:layout_height="57dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.277">

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Introduce_tu_email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="302dp"
        android:layout_height="82dp"
        android:layout_marginTop="124dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/tvContrasenha2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/introduce_la_contrase_a"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/RecordarContrasenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Recordar_contraseña" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="295dp"
        android:layout_height="53dp"
        android:layout_marginTop="236dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/btnenviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="entrar"
            android:text="@string/Entrar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="295dp"
        android:layout_height="53dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.953">

        <Button
            android:id="@+id/btnregistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registrar"
            android:text="@string/Registrarse" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="298dp"
            android:layout_height="179dp"
            android:layout_marginTop="28dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.566"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/large_bytekarma"/>
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>